force-app/main/default/objects/A_EmailMessage__c/A_EmailMessage__c.object-meta.xml
<CustomObject>
    <description>Archive object to support records archived with Big Objects prior to migration to new solution. DO NOT USE OR DELETE THIS OBJECT. Its empty definition is required to ensure old records can be surfaced in new archive solution</description>
    <label>_ARCHIVE Email Message</label>
    <nameField>
        <displayFormat>REC-{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>_ARCHIVE Email Message</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>