force-app/main/default/objects/A_EmailMessage__c/fields/S_HtmlBody__c.field-meta.xml
<CustomField>
    <fullName>S_HtmlBody__c</fullName>
    <label>HTML Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>