force-app/main/default/objects/A_EmailMessage__c/fields/S_ParentId_Indexed__c.field-meta.xml
<CustomField>
    <fullName>S_ParentId_Indexed__c</fullName>
    <label>Case ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>