force-app/main/default/objects/A_EmailMessage__c/fields/S_Status__c.field-meta.xml
<CustomField>
    <fullName>S_Status__c</fullName>
    <label>Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>