force-app/main/default/objects/A_EmailMessage__c/fields/ToCc__c.field-meta.xml
<CustomField>
    <fullName>ToCc__c</fullName>
    <label>To &amp; Cc Address</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>